2002-08-28  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* FileSystemWatcher.cs: IDisposable fixes.

2002-08-23  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* InternalBufferOverflowException.cs:
	* NotifyFilters.cs:
	* WatcherChangeTypes.cs: little fixes based on class status page.

2002-08-15  Tim Coleman <tim@timcoleman.com>
	* ErrorEventArgs.cs:
	* ErrorEventHandler.cs:
	* FileSystemEventArgs.cs:
	* FileSystemEventHandler.cs:
	* FileSystemWatcher.cs:
	* InternalBufferOverflowException.cs:
	* IODescriptionAttribute.cs:
	* NotifyFilters.cs:
	* RenamedEventArgs.cs:
	* RenamedEventHandler.cs:
	* WaitForChangedResult.cs:
	* WatcherChangeTypes.cs:
		New stubs added.

2002-07-20  Dick Porter  <dick@ximian.com>

	* MonoIO.cs: Cut down copy of corlib/System.IO/MonoIO.cs, so it
	can be used from the System assembly but still not be exposed to
	users.
