@@ -1,3 +1,8 @@
+2002-09-15  Duncan Mak  <duncan@ximian.com>
+
+	* FileSystemWatcher.cs (FileSystemWatcher): Fixed the null-param
+	constructor.
+
 2002-08-28  Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
 	* FileSystemWatcher.cs: IDisposable fixes.
